# whiteTesting

./: CMakeLists.txt
.github/workflows/: test.yml
src/: calc.c
test/: test_calc.cpp
